Closed Bug 24705 Opened 26 years ago Closed 26 years ago

[BLOCKER][Regression] Mailto links broken

Categories

(MailNews Core :: Composition, defect, P3)

All
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: nbaca, Assigned: bugzilla)

Details

Build 2000012109M13: NT4 Build 2000012108M13: Linux 6.0 Build 2000012108M13: Mac 8.5.1 Overview: In the 3-pane view, select an address link in a message. Try to send the message and notice it is never delivered. Steps to reproduce: 1. In the 3-pane select a message 2. In the message pane select one of the address links (lchiang@netscape.com). A new Composer window should appear with the "To:" field prefilled. 3. Send the message Actual Results: When the new Composer window appears notice that the address states "lchiang%40netscape.com" instead of "lchiang@netscape.com". After sending the message it is returned because it tried to send the message to "lchiang@40netscape.com". Expected Results: After selecting the address link it should prefill the address field with the correct email address, "lchiang@netscape.com". Additional Information: - I checked the Windows build from 1/20 and this problem did not occur.
Summary: [BLOCKER][Regression]Message returned when using address link in message pane → [BLOCKER][Regression] Mailto links broken
working on it...
Status: NEW → ASSIGNED
sound to be a regression of my fix for bug 24301. I have checked every way to create a message except this one!
M13
Target Milestone: M13
As we don't need and must not escape value pass to OpenComposeWindowWithValue anymore (see bug 24301), OpenComposeWindowWithURI must not escape them before calling OpenComposeWindowWithValue. Sorry I missed this case!!!!! No Ice cream for me today. Anyway, here is the fix: Index: nsMsgComposeService.cpp =================================================================== RCS file: /cvsroot/mozilla/mailnews/compose/src/nsMsgComposeService.cpp,v retrieving revision 1.21 diff -r1.21 nsMsgComposeService.cpp 184,191c184,190 < // and all our arguments must be escaped! < nsAutoString uniToPart = nsEscape(aToPart, url_Path); < nsAutoString uniCcPart = nsEscape(aCcPart, url_Path); < nsAutoString unicBccPart = nsEscape(aBccPart, url_Path); < nsAutoString uniNewsgroup = nsEscape(aNewsgroup, url_Path); < nsAutoString uniSubjectPart = nsEscape(aSubjectPart, url_Path); < nsAutoString uniBodyPart = nsEscape(aBodyPart, url_Path); < nsAutoString uniAttachmentPart = nsEscape(aAttachmentPart, url_Path); --- > nsAutoString uniToPart = aToPart; > nsAutoString uniCcPart = aCcPart; > nsAutoString unicBccPart = aBccPart; > nsAutoString uniNewsgroup = aNewsgroup; > nsAutoString uniSubjectPart = aSubjectPart; > nsAutoString uniBodyPart = aBodyPart; > nsAutoString uniAttachmentPart = aAttachmentPart;
looks good to me. r=sspitzer
me too. -jefft
Whiteboard: Fix in hand, waiting for approval
Fixed and checked in in both the tip (M14) and in the branch (M13)
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Whiteboard: Fix in hand, waiting for approval
I'm worried about this fix. It's very possible that the mailto url will contain values in it that MUST be escaped in order pass them around. particularly addresses that contain 8 bit data. I'm worried that we got rid of the escaping 'cause it did need to be there.
Don't worry, parameters (in occurance addresses) are going directly into a nsMsgCompFields before be passed to the Window. That why we don't need and must not escape them anymore. The new way is better than before where we use to pass everything to the window as text where special characters could cause problem. To fully undestand, OpenComposeWindowWithURI will call OpenComposeWindowWithValues which now call OpenComposeWindowWithCompFields. The only potential problem would be that value retreive from GetMessageContents() are already escaped and if that the case (which I doubt), we need to unescape then before going further.
OK using 2000-01-24-01 commercial m13 build on linux 6.0 OK using 2000-01-24-00 commercial m13 build on NT 4.0
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.