Bug 24705. OpenComposeWindowWithURI must not escape parameters before calling OpenComposeWindowWithValues since fix for bug 24301. R=ssptizer,jefft A=brendan@mozilla.org,jar,chofmann